		- added airfoil "flip" capability
		- added referenceable template drive callers
		- added "deformable axial joint"
		- added elastomeric damper (from Gandhi, Chopra, JAHS 1994)
		- added muscle constitutive laws (from Pennestri, JB 2007)
		- log structural forces (Reinhard Resch)
		- log missing joint types
		- allow boolean in node/element output flag (Reinhard Resch)
	Backward compatibility issues:
		- the (undocumented) output of the total (pin) joint changed
	Known issues:
		- Schur solver is broken
	Bug fixes:
		- fix node label in external structural force output
		- fix typo in eigenanalysis documentation (Patrick Rix)
		- fix working directory setting
		- fix input/output file name inconsistencies
		- fix crash in eigenvectors output (noted by Reinhard Resch)
		- fix build with Intel's icpc
		- fix parameter node use in elems (noted by Reinhard Resch)

MBDyn 1.4.0
	Enhancements:
		- added shell element (Marco Morandini, Riccardo Vescovini)
		- added more verbose info to mapping file generated by
		  create_mls_interface
		- added multiple flavors of Glauert inflow
		- added output flag to .out file
		- added GiNaC-based symbolic drive caller
		- log "body" data (Reinhard Resch)
		- improve umfpack version detection (supports >= 5 only)
		- potential energy private data for rigid bodies
		  (Louis Gagnon)
		- allow meta-data in fixed-step file drive input file
		- added more functions to model namespace
		- added previous time step functions to model namespace
		- added support for f95 modules (Reinhard Resch)
		- added gravity element output (noted by Patrick Rix)
		- added module-asynchronous_machine (Reinhard Resch)
		- added getaddrinfo support
		- added struct node labels logging (Reinhard Resch)
		- added module-hydrodynamic_plain_bearing (Reinhard Resch)
	Backward compatibility issues:
		- output of reference node forces changed in modal mapping
	Known issues:
		- Schur solver is broken
	Bug fixes: